DebianMeeting/2019-03/examples/variable/src/main.rs
fn main() {
    let x = 1;
    println!("x = {}", x);
    let x = 1.25;
    println!("x = {}", x);

    // x = 1;   // error: expected floating-point number, found integer
    // x = 1.5; // error: cannot assign twice to immutable variable

    let mut y: u32 = 1;
    y -= 1;
    y -= 1;
    println!("y = {}", y);
}
